samples/_failures_safe/1761546550_982663_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4c620ce7.c: In function ‘main’:
./samples/SAFE/__tmp_4c620ce7.c:170:9: error: expected declaration or statement at end of input
  170 |         return 1;
      |         ^~~~~~
./samples/SAFE/__tmp_4c620ce7.c:170:9: error: expected declaration or statement at end of input
